Fix alignment on career table

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5432,6 +5432,7 @@ color: #FFFFFF;
 	border: none;
 	border-top: 1px solid rgba(147, 161, 175, 0.6);
 	line-height: 1.5em;
+	text-align: left;
 }
 
 .careers-position-title {
